# Bootstrapmodule_cpp

./: .gitignore  Bootstrapmodule_cpp.vcxproj  CMakeLists.txt  LICENSE  README.md
Source/: Appmain.cpp  Stdinclude.h  Stdinclude.hpp
Source/Bootstrap/: ELFCallback.cpp  Entrypointcallback.cpp  PECallback.cpp  Pluginloader.cpp  Resumeprogram.asm  TLSDelay.cpp
Source/Bootstrapper/: Bootstrap.hpp  ELFCallback.cpp  PECallback.cpp  Pluginloader.cpp  TLSCallback.cpp  win64resume.asm
Source/Configuration/: Defines.h  Defines.hpp  Macros.h  Macros.hpp
Source/Utility/: Filesystem.hpp  Logfile.hpp  Memprotect.hpp  Variadicstring.hpp  zip_file.hpp
Source/Utility/Binary/: Hooking.cpp  Hooking.h  Memprotect.cpp  Memprotect.h  Patternscan.cpp  Patternscan.h
Source/Utility/Cryptography/: FNV1Hash.h
Source/Utility/Data/: Ayriapackage.cpp  Ayriapackage.h  Base64.h  Bytebuffer.cpp  Bytebuffer.h  SystemIO.h
Source/Utility/Text/: Logfile.h  Variadicstring.h
